--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,92 @@
-/* style for form */
-body {
-    background-color: #f5fcfb;
-    font-family: Arial, Helvetica, sans-serif;
+html, body {
+    overflow-x: hidden;
 }
 
-.logo {
-    display: flex;
-    margin-top: 200px;
-    height: 100px;
-    justify-content: center;
+.navbar {
+    background-color: black;
 }
 
-h1 {
-    text-align: center;
-    color: #143478;
-    font-size: 25px;
+.footer-row {
+    background-color: black;
 }
 
-.email-input, .password-input {
-    display: flex;
-    justify-content: center;
+.footer-text {
+    color: white;
 }
 
-.email-lenght {
-    border: 1px solid lightslategrey;
-    border-radius: 3px;
-    min-width: 250px;
-    line-height: 30px;
+.card-text {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
-.email-lenght:focus {
-    border: solid 3px royalblue;
-    outline: 3px solid transparent;
-    border-radius: 5px;
+.article-text {
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
-.password-lenght {
-    border: 1px solid lightslategrey;
-    border-radius: 3px;
-    border-top: none;
-    min-width: 250px;
-    line-height: 30px;
+.article-text-part {
+    text-align: justify;
 }
 
-.password-lenght:focus {
-    border: solid 3px royalblue;
-    outline: 3px solid transparent;
-    border-radius: 5px;
+.chat-container {
+    border: 1px solid black;
+    border-radius: 7px;
 }
 
-.password-input {
-    border-top: 0px;
+.message-form {
+    border-top: 1px solid black;
+    background-image: linear-gradient(rgba(255, 245, 245, 0.918), rgba(99, 85, 85, 0.247)), url("../Images/carousel images/1920x600/2461292.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.remember-me {
-    display: flex;
-    justify-content: center;
-    margin: 5px;
-    font-size: 14px;
-    color: #333;
-    padding: 3px;
+.chat-col {
+    height: 420px;
 }
 
-.btn {
-    display: flex;
-    justify-content: center;
+.sent-message-wrapper {
+    border-bottom: 1px solid black;
+    background-color: rgba(172, 168, 168, 0.123);
 }
 
-.button {
-    background-color: royalblue;
-    min-width: 200px;
-    color: #fff;
-    border: #999;
-    border-radius: 4px;
-    min-width: 260px;
-    padding: 8px;
+.sent-message-timestamp {
+    color: rgb(172, 165, 165);
+    font-size: small;
 }
 
-.copyright {
-    display: flex;
-    justify-content: center;
-    color: grey;
-    font-size: 14px;
-    margin-top: 25px;
+.register-middle-content {
+    background-image: linear-gradient(rgba(255, 245, 245, 0.918), rgba(99, 85, 85, 0.247)), url("../Images/carousel images/1920x600/2461292.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+form .error {
+    color: #ff0000;
+}
+
+.contacts h5 {
+    margin: 0;
+}
+
+.mapouter {
+    position: relative;
+    text-align: right;
+    width: 100%;
+    height: 400px;
+}
+
+.gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    width: 100%;
+    height: 400px;
+}
+
+.gmap_iframe {
+    height: 400px !important;
+
 }
