add css changes

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ form .error {
     font-family: Arial, Helvetica, sans-serif;
 } */
 
-.logo {
+/* .logo {
     display: flex;
     margin-top: 200px;
     height: 100px;
@@ -179,4 +179,4 @@ h1 {
     color: grey;
     font-size: 14px;
     margin-top: 25px;
-}
+} */
