--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,21 @@ html, body {
 .navbar {
     background-color: black;
 }
+.image-container {
+    /* padding: 10px; */
+    background-image: url(../images/extreme_adventure/background.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    background-attachment: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(109, 58, 58);
+    flex-direction: column;
+    margin: auto;
+}
+
 
 .footer-row {
     background-color: black;
