--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 } */
 
-body {
+/* body {
   display: flex;
   align-items: center;
   padding-top: 40px;
@@ -110,4 +110,4 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
+} */
