--- a/css/style.css
+++ b/css/style.css
@@ -65,11 +65,13 @@ form .error {
 
 
 
-/* style for login with bootstrap*/
+
+
+/* style for login (bootstrap)*/
 
 /* html,
 body {
-  height: 100%;
+  height: 100%; */
 
 
 /* body {
@@ -110,4 +112,4 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-} */
+}
