--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html, body {
     justify-content: center;
     color: rgb(109, 58, 58);
     flex-direction: column;
-    margin: auto;
+    /* margin: auto; */
 }
 
 
