--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,13 @@ html, body {
 }
 
 .register-middle-content {
-    background-image: linear-gradient(rgba(255, 245, 245, 0.918), rgba(99, 85, 85, 0.247)), url("../images/mild_adventure/swimming-with-sharks_3-1024x576.jpg");
+    background-image: linear-gradient(rgba(255, 245, 245, 0.918), rgba(99, 85, 85, 0.247)), url("../Images/medium_adventure/swimming-with-sharks_3-1024x576.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.sea {
+    background-image: linear-gradient(rgba(255, 245, 245, 0.918), rgba(99, 85, 85, 0.247)), url("../Images/medium_adventure/swimming-with-sharks_3-1024x576.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -62,9 +68,8 @@ form .error {
     color: #ff0000;
 }
 
-.form-signin {
+/* .form-signin {
     width: 100%;
-    max-width: 330px;
     padding: 15px;
     margin: auto;
 }
@@ -87,12 +92,10 @@ form .error {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-  }
+} */
 
-  
 .sea {
     background-image: linear-gradient(rgba(255, 245, 0.918), rgba(99, 85, 85, 0.247) url("../images/logo/login-background.jpg"));
     background-repeat: no-repeat;
     background-size: cover;
-  }
-
+}
