--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ html, body {
     margin: auto;
     text-align: center;
 }
+
 /* .index-text{
   text-align: center;
 } */
@@ -62,19 +63,13 @@ html, body {
     background-size: cover;
 }
 
-
-    
- 
-
 .sea {
     background-image: url("../images/logo/login-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
-
-    
+    justify-content: center; */
 }
 
 form .error {
