--- a/css/style.css
+++ b/css/style.css
@@ -7,25 +7,10 @@ html, body {
     background-color: black;
 }
 
-.image-container {
-    /* padding: 10px; */
-    background-image: url(../images/extreme_adventure/background.jpg);
+.top-image-container {
+    background-image: url(../images/logo/solo-travel-iStock-904084674.jpg);
     background-size: cover;
-    width: 100%;
-    height: 100vh;
-    background-attachment: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgb(109, 58, 58);
-    flex-direction: column;
-    margin: auto;
-    text-align: center;
 }
-
-/* .index-text{
-  text-align: center;
-} */
 
 .footer-row {
     background-color: black;
@@ -58,7 +43,7 @@ html, body {
 }
 
 .register-middle-content {
-    background-image: linear-gradient(rgba(255, 245, 245, 0.918), rgba(99, 85, 85, 0.247)), url("../Images/medium_adventure/swimming-with-sharks_3-1024x576.jpg");
+    background-image: linear-gradient(rgba(255, 245, 245, 0.918), rgba(99, 85, 85, 0.247)), url("../Images/extreme_adventure/swimming-with-sharks_3-1024x576.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
